syntax = "proto3";
package douyin.core;

option go_package = "pb/";

import "common.proto";
import "api.proto";

message douyin_user_request {
  int64 user_id = 1 [(api.query) = "user_id"]; // 用户id
  string token = 2 [(api.query) = "token"]; // 用户鉴权token
}

message douyin_user_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  User user = 3; // 用户信息
}

message douyin_user_login_request {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message douyin_user_login_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

message douyin_user_register_request {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message douyin_user_register_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}
